--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "js-sha256": "^0.9.0",
         "jwt-decode": "^2.2.0",
         "moment": "^2.24.0",
+        "numeral": "^2.0.6",
         "query-string": "^6.11.1",
         "vue": "^2.6.11",
         "vue-apollo": "^3.0.3",
