--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+VUE_APP_API_URL="http://192.168.1.242:42000"
+
 alias start="source .env && npm run serve -- --port 5000"
+alias start="npm run build"
