--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: action/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: "12.0"
       - run: npm ci && npm run build
