--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "query-string": "^6.11.1",
         "vue": "^2.6.11",
         "vue-apollo": "^3.0.3",
+        "vue-bootstrap-typeahead": "^0.2.6",
         "vue-router": "^3.1.5",
         "vuex": "^3.1.2"
     },
