--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "apollo-client": "^2.6.8",
         "apollo-link": "^1.2.13",
         "apollo-link-http": "^1.5.16",
+        "apollo-link-persisted-queries": "^0.2.2",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.6.1",
