--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
         "moment": "^2.24.0",
         "numeral": "^2.0.6",
         "query-string": "^6.11.1",
+        "underscore": "^1.10.2",
         "vue": "^2.6.11",
         "vue-apollo": "^3.0.3",
+        "vue-axios": "^2.1.5",
         "vue-bootstrap-typeahead": "^0.2.6",
         "vue-router": "^3.1.5",
         "vuex": "^3.1.2"
