Turning MV on the homepage back on

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-VUE_APP_API_URL="http://192.168.1.242:42000"
+#VUE_APP_API_URL="http://192.168.1.242:42000"
+VUE_APP_API_URL="https://api.neo.eveisesi.space"
+
 
 alias start="source .env && npm run serve -- --port 5000"
